--- a/src/app/modules/administrador/welcome-administrador/welcome-administrador.component.html
+++ b/src/app/modules/administrador/welcome-administrador/welcome-administrador.component.html
@@ -1,1 +1,22 @@
-<router-outlet></router-outlet>
+
+<app-side-bar-admin></app-side-bar-admin>
+
+<main id="main" class="main">
+
+    <div class="pagetitle">
+      <h1>Dashboard</h1>
+      <router-outlet></router-outlet>
+      <nav>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">Dashboard</li>
+
+        
+        </ol>
+      </nav>
+    </div><!-- End Page Title -->
+
+    
+
+  </main><!-- End #main -->
+  
