--- a/src/app/modules/docente-capacitador/welcome-docente-capacitador/welcome-docente-capacitador.component.html
+++ b/src/app/modules/docente-capacitador/welcome-docente-capacitador/welcome-docente-capacitador.component.html
@@ -1,2 +1,22 @@
 
-<router-outlet></router-outlet>
+<app-side-bar></app-side-bar>
+
+<main id="main" class="main">
+
+    <div class="pagetitle">
+      <h1>Dashboard</h1>
+      <router-outlet></router-outlet>
+      <nav>
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">Dashboard</li>
+
+        
+        </ol>
+      </nav>
+    </div><!-- End Page Title -->
+
+    
+
+  </main><!-- End #main -->
+  
