--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -1,1 +1,151 @@
-<p>bienvenida-home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    
+
+</head>
+<body>
+   <app-header></app-header>
+    <div class="bgimage">
+        <div class="menu">
+        </div>
+        <div class="text">
+            <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
+            <h4>CAPACITATE</h4>
+            <h1> TECNOLOGICO DEL AZUAY </h1>
+            <h3> Innovación de hoy para el éxito del mañana </h3>
+            <button class="btn" onclick="window.location.href='/Log'">Iniciar Sesión</button>
+            <button class="btn" onclick="window.location.href='/Reg'"> Registrate</button>
+        </div>
+    </div>
+
+    	<!--   Tarjetas-->
+
+<div class="title-cards">
+    <h2>Servicios que Ofrecemos</h2>
+</div>
+<div class="container-card">
+
+<div class="card">
+<figure>
+    <img src="https://images.unsplash.com/photo-1619252584172-a83a949b6efd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80">
+</figure>
+<div class="contenido-card">
+    <h3>Diseño Gràfico</h3>
+    <p>Podemos crear la identidad corporativa de tu empresa. Diseño , Maquetación de folletos, Catálogos, Papelería y mucho más.</p>
+    <a href="#">Leer Màs</a>
+</div>
+</div>
+<div class="card">
+<figure>
+    <img src="https://images.unsplash.com/photo-1609334761848-77b4d1994040?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+</figure>
+<div class="contenido-card">
+    <h3>Gestión de Redes</h3>
+    <p>Nosotros creamos y optimizamos tus perfiles en las Redes Sociales. Importantes para que tu presencia online sea completa.</p>
+    <a href="#">Leer Màs</a>
+</div>
+</div>
+<div class="card">
+<figure>
+    <img src="https://images.unsplash.com/photo-1601836242545-7be3c010c141?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80">
+</figure>
+<div class="contenido-card">
+    <h3>Desarrollo Web</h3>
+    <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+    <a href="#">Leer Màs</a>
+</div>
+</div>
+</div>
+<!--Fin   Tarjetas-->
+  <!--Parte de Quienes somos-->
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>¿Quiénes Somos?</h2>
+      <p>DIGITAL & TECH es un equipo dedicado a expandir los límites del desempeño y 
+        explorar posibilidades de juego. El mundo de los juegos está en constante evolución y
+        nos esmeramos para afrontar sus retos. Con una mejor integración de dispositivos y juegos, 
+        facilitamos una experiencia de juegos cada vez mejor. Para ello incluimos elementos como HERO, 
+        nuestro sensor de juego más preciso, y 
+        LIGHTSYNC, nuestra tecnología RGB determinada por el juego.</p>
+    </div>
+    <img src="https://images.unsplash.com/photo-1533195925550-d1229db43cf2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="me">
+  </div>
+
+  <!--Parte de Mision-->
+  <div class="about-me">
+    <img src="https://images.unsplash.com/photo-1524656855800-59465ebcec69?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="me">
+
+    <div class="about-me-text">
+      <h2>Mision </h2>
+      <p>DIGITAL & TECH nos esforzamos por ofrecer a nuestros clientes las soluciones más innovadoras y 
+        eficientes para satisfacer sus necesidades tecnológicas. Nos comprometemos a proporcionar productos
+         y servicios de alta calidad y un servicio excepcional al cliente. Nuestro objetivo es ayudar a nuestros
+          clientes a mantenerse a la vanguardia de la tecnología y mejorar su calidad de vida a través de la innovación
+          .</p>
+    </div>
+  </div>
+
+  <!--Parte de Vision-->
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>Vision</h2>
+      <p>DIGITAL & TECH tenemos la visión de ser líderes en la industria de la tecnología, 
+        ofreciendo soluciones innovadoras y de vanguardia que cambian la forma en que la gente
+         vive y trabaja. Queremos ser reconocidos por nuestra excelencia en el servicio al cliente 
+         y por nuestro compromiso con la calidad. Esperamos ser una fuente confiable de tecnología para
+          nuestros clientes, ofreciendo soluciones personalizadas que cumplan con sus necesidades específicas.
+           En última instancia, nuestra visión es crear un mundo donde la tecnología mejore la vida de las personas 
+           de manera significativa y sostenible.</p>
+    </div>
+    <img src="https://images.unsplash.com/photo-1503945438517-f65904a52ce6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="me">
+  </div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4> Compañía</h4>
+                <ul>
+                    <li><a href="#">Compañía 1</a></li>
+                    <li><a href="#">Compañía 2</a></li>
+                    <li><a href="#">Compañía 3</a></li>
+                    <li><a href="#">Compañía 4</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Necesitas Ayuda</h4>
+                <ul>
+                    <li><a href="#">¿Quienes somos?</a></li>
+                    <li><a href="#">Mision</a></li>
+                    <li><a href="#">Vision</a></li>
+
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Tienda online</h4>
+                <ul>
+                    <li><a href="#">Catalogo</a></li>
+                    <li><a href="#">Registrate</a></li>
+                    <li><a href="#">Iniciar Sesion</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Siguenos</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer> 
+</body>
+</html>
