--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,43 @@
-<p>header works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Dashboard - NiceAdmin Bootstrap Template</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
+ 
+  <!-- Template Main CSS File -->
+
+
+
+</head>
+
+<body>
+    <header id="header" class="header fixed-top d-flex align-items-center" >
+        <div class="d-flex align-items-center justify-content-center" style="flex-grow: 1;">
+            <a class="logo d-flex align-items-center" style="text-align: center; width: 100%;">
+                <img src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
+                <span class="d-none d-lg-block" style="margin-left: 10px; color: rgb(255, 191, 0);">Tec</span> <span class="d-none d-lg-block" style="color: rgb(0, 60, 255);">Azuay</span>
+            </a>
+        </div>
+        <div class="search-bar"></div>
+    </header>
+    
+  
+</body>
+</html>
