home page arreglado falta footer

--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.html
@@ -27,37 +27,37 @@
     	<!--   Tarjetas-->
 
 <div class="title-cards">
-    <h2>Servicios que Ofrecemos</h2>
+    <h2>Ofertas de Capacitacion</h2>
 </div>
 <div class="container-card">
 
 <div class="card">
 <figure>
-    <img src="https://images.unsplash.com/photo-1619252584172-a83a949b6efd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1674&q=80">
+    <img src="https://frontdeskhelpers.com/wp-content/uploads/2020/04/app-dev.png">
 </figure>
 <div class="contenido-card">
-    <h3>Diseño Gràfico</h3>
-    <p>Podemos crear la identidad corporativa de tu empresa. Diseño , Maquetación de folletos, Catálogos, Papelería y mucho más.</p>
+    <h3>Desarrollo Movil</h3>
+    <p>Capacitacion introductoria a desarrollo movil en java, kotlin , objetive-c y swift, herramientas y Programacion orientada a objetos</p>
     <a href="#">Leer Màs</a>
 </div>
 </div>
 <div class="card">
 <figure>
-    <img src="https://images.unsplash.com/photo-1609334761848-77b4d1994040?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
-</figure>
-<div class="contenido-card">
-    <h3>Gestión de Redes</h3>
-    <p>Nosotros creamos y optimizamos tus perfiles en las Redes Sociales. Importantes para que tu presencia online sea completa.</p>
-    <a href="#">Leer Màs</a>
-</div>
-</div>
-<div class="card">
-<figure>
-    <img src="https://images.unsplash.com/photo-1601836242545-7be3c010c141?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80">
+    <img src="https://i.ytimg.com/vi/gGJSyySfTMQ/maxresdefault.jpg">
 </figure>
 <div class="contenido-card">
     <h3>Desarrollo Web</h3>
-    <p>Creamos tu página web utilizando las últimas tecnologías disponibles. Una Web adaptativa a tu móvil o Tablet y con un gestor de contenido fácil.</p>
+    <p>Capacitacion con nivel intermedio-avanzado, conociminetos de la web, framework a trabajar angular , herramientas VS y conexion con ApiRest </p>
+    <a href="#">Leer Màs</a>
+</div>
+</div>
+<div class="card">
+<figure>
+    <img src="https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://www.filepicker.io/api/file/xJXLt6duTkq3LaY3WFq5">
+</figure>
+<div class="contenido-card">
+    <h3>Desarrollo ApiRest </h3>
+    <p>Creacion del backend desarrollado en java utilizando la herramienta de IntelliJ IDEA.</p>
     <a href="#">Leer Màs</a>
 </div>
 </div>
@@ -66,28 +66,19 @@
   <!--Parte de Quienes somos-->
   <div class="about-me">
     <div class="about-me-text">
-      <h2>¿Quiénes Somos?</h2>
-      <p>DIGITAL & TECH es un equipo dedicado a expandir los límites del desempeño y 
-        explorar posibilidades de juego. El mundo de los juegos está en constante evolución y
-        nos esmeramos para afrontar sus retos. Con una mejor integración de dispositivos y juegos, 
-        facilitamos una experiencia de juegos cada vez mejor. Para ello incluimos elementos como HERO, 
-        nuestro sensor de juego más preciso, y 
-        LIGHTSYNC, nuestra tecnología RGB determinada por el juego.</p>
+      <h2>TecAzuay Capacitando</h2>
+      <p>El Instituto Superior Universitario Tecnológico del Azuay se consolida como una institución de educación superior que sustenta sus procesos de enseñanza-aprendizaje en el ámbito técnico y tecnológico de grado y posgrado, con la más alta calidad académica y humana, sobre la base de fundamentos científicos; con el propósito de proveer soluciones a los problemas y necesidades de la sociedad desde la docencia, la investigación científica y la vinculación..</p>
     </div>
-    <img src="https://images.unsplash.com/photo-1533195925550-d1229db43cf2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="me">
+    <img src="https://scontent.fcue1-1.fna.fbcdn.net/v/t39.30808-6/321500026_5802495706493873_2084185095659677616_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=730e14&_nc_ohc=L1Oiv6RhfQQAX-4RCWS&_nc_ht=scontent.fcue1-1.fna&oh=00_AfBknPZfJ_inzKmbgZSOKhBzkp91HOFS2npU16oFUXYmag&oe=644B6B65" alt="me">
   </div>
 
   <!--Parte de Mision-->
   <div class="about-me">
-    <img src="https://images.unsplash.com/photo-1524656855800-59465ebcec69?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" alt="me">
+    <img src="https://scontent.fcue1-1.fna.fbcdn.net/v/t39.30808-6/342043495_769610987898701_1993429123696271834_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a26aad&_nc_ohc=1Bv9UPmD1MEAX-Ki0dG&_nc_ht=scontent.fcue1-1.fna&oh=00_AfDvwpXPf77k-LbKpK4OmWDYfkkpfby5Tu9qgNjqxmKdvg&oe=644BCE47" alt="me">
 
     <div class="about-me-text">
       <h2>Mision </h2>
-      <p>DIGITAL & TECH nos esforzamos por ofrecer a nuestros clientes las soluciones más innovadoras y 
-        eficientes para satisfacer sus necesidades tecnológicas. Nos comprometemos a proporcionar productos
-         y servicios de alta calidad y un servicio excepcional al cliente. Nuestro objetivo es ayudar a nuestros
-          clientes a mantenerse a la vanguardia de la tecnología y mejorar su calidad de vida a través de la innovación
-          .</p>
+      <p>Ser una institución de calidad, solidaria, inclusiva, intercultural y diversa, reconocida por su excelencia académica y sus aportes a la sociedad en el área de la investigación, innovación tecnológica y vinculación, a nivel nacional e internacional, promoviendo el desarrollo integral de la persona y el entorno, en busca de una sociedad justa y equitativa.</p>
     </div>
   </div>
 
@@ -95,57 +86,11 @@
   <div class="about-me">
     <div class="about-me-text">
       <h2>Vision</h2>
-      <p>DIGITAL & TECH tenemos la visión de ser líderes en la industria de la tecnología, 
-        ofreciendo soluciones innovadoras y de vanguardia que cambian la forma en que la gente
-         vive y trabaja. Queremos ser reconocidos por nuestra excelencia en el servicio al cliente 
-         y por nuestro compromiso con la calidad. Esperamos ser una fuente confiable de tecnología para
-          nuestros clientes, ofreciendo soluciones personalizadas que cumplan con sus necesidades específicas.
-           En última instancia, nuestra visión es crear un mundo donde la tecnología mejore la vida de las personas 
-           de manera significativa y sostenible.</p>
+      <p>Ser una institución de calidad, solidaria, inclusiva, intercultural y diversa, reconocida por su excelencia académica y sus aportes a la sociedad en el área de la investigación, innovación tecnológica y vinculación, a nivel nacional e internacional, promoviendo el desarrollo integral de la persona y el entorno, en busca de una sociedad justa y equitativa.</p>
     </div>
-    <img src="https://images.unsplash.com/photo-1503945438517-f65904a52ce6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="me">
+    <img src="https://dev2020.tecazuay.edu.ec/wp-content/uploads/2020/05/EBF_2802-1024x684.jpg" alt="me">
   </div>
 
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="footer-col">
-                <h4> Compañía</h4>
-                <ul>
-                    <li><a href="#">Compañía 1</a></li>
-                    <li><a href="#">Compañía 2</a></li>
-                    <li><a href="#">Compañía 3</a></li>
-                    <li><a href="#">Compañía 4</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Necesitas Ayuda</h4>
-                <ul>
-                    <li><a href="#">¿Quienes somos?</a></li>
-                    <li><a href="#">Mision</a></li>
-                    <li><a href="#">Vision</a></li>
-
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Tienda online</h4>
-                <ul>
-                    <li><a href="#">Catalogo</a></li>
-                    <li><a href="#">Registrate</a></li>
-                    <li><a href="#">Iniciar Sesion</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Siguenos</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer> 
+<app-footer></app-footer>
 </body>
 </html>
