--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            
+            <div class="footer-col">
+                <h4>Necesitas Ayuda</h4>
+                <ul>
+                    <li><a href="#">¿Quienes somos?</a></li>
+                    <li><a href="#">Mision</a></li>
+                    <li><a href="#">Vision</a></li>
+
+                </ul>
+            </div>
+          
+            
+        </div>
+    </div>
+</footer> 
