--- a/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.css
+++ b/src/app/modules/home/bienvenida-home/pages/bienvenida-home/bienvenida-home.component.css
@@ -29,7 +29,7 @@
     cursor: pointer;
 }
 .rightmenu ul li:hover{
-    color: #743ae1;
+    color: #e1a73a;
 }
 
 a.b-home {
@@ -53,7 +53,7 @@ a.b-home:hover {
     width: 300px;
 }
 .bgimage{
-    background: linear-gradient(rgba(55, 78, 247, 0.55), rgba(255, 163, 4, 0.271)),url("https://www.marshallsindia.com/ImageBuckets/ItemImages/ZA%201903.jpg?id=75");
+    background: linear-gradient(rgba(230, 231, 238, 0.663), rgba(4, 104, 255, 0.515)),url("https://www.marshallsindia.com/ImageBuckets/ItemImages/ZA%201903.jpg?id=75");
     background-size: 100%;
     width: 100%;
     height: 100vh;
@@ -116,8 +116,8 @@ a.b-home:hover {
     border-radius: 10px;
 }
 .btn:hover{
-    background-color: #743ae1;
-    color: black;
+ background-color: #156bff;
+    color: rgb(255, 255, 255);
 }
 
 
