--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,43 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+<header>
+    <div class=" con px-3 py-2 ">
+     
+      <div class="">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+            <img src="https://dev2020.tecazuay.edu.ec/wp-content/uploads/2022/11/cropped-LOGO-RECTANGULAR_SIN-FONDO.png" style="width:230px; " alt="">
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+          </a>
 
-  <!-- Favicons -->
-
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-
- 
-  <!-- Template Main CSS File -->
-
-
-
-</head>
-
-<body>
-    <header id="header" class="header fixed-top d-flex align-items-center" >
-        <div class="d-flex align-items-center justify-content-center" style="flex-grow: 1;">
-            <a class="logo d-flex align-items-center" style="text-align: center; width: 100%;">
-                <img src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
-                <span class="d-none d-lg-block" style="margin-left: 10px; color: rgb(255, 191, 0);">Tec</span> <span class="d-none d-lg-block" style="color: rgb(0, 60, 255);">Azuay</span>
-            </a>
+          <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            <li>
+              <a id="ico" href="#" class="nav-link ">
+                <i class="bi bi-house"></i>
+                Home
+              </a>
+            </li>
+            
+            <li>
+              <a  id="ico" href="#" class="nav-link ">
+                <i class="bi bi-file-person"></i>
+                Docentes
+              </a>
+            </li>
+            <li>
+              <a   id="ico" href="#" class="nav-link ">
+                <i class="bi bi-info-circle"></i>
+                Informacion
+              </a>
+            </li>
+            <li>
+              <a   id="ico" href="#" class="nav-link ">
+                <i class="bi bi-card-list"></i>
+                Cursos
+              </a>
+            </li>
+           
+          </ul>
+          <div class="text-end">
+            <button type="button" style="border-radius: 15px;" class="btn btn-light text-dark me-2">Login</button>
+            <button type="button"  style="border-radius: 15px;" class="btn btn-primary">Sign-up</button>
+          </div>
         </div>
-        <div class="search-bar"></div>
-    </header>
-    
-  
-</body>
-</html>
+      </div>
+    </div>
+   
+  </header>
