--- a/src/app/modules/home/auth/pages/auth/auth.component.html
+++ b/src/app/modules/home/auth/pages/auth/auth.component.html
@@ -1,1 +1,40 @@
-<p>auth works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive Example</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <style>
+    /* Add your styles here */
+  </style>
+</head>
+<app-header></app-header>
+<body>
+
+ 
+  <div class="bgimage">
+    <div class="menu">
+      <!-- Add your menu items here -->
+    </div>
+    <div class="text">
+      <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
+      <div class="background">
+        <div class="shape"></div>
+        <div class="shape"></div>
+      </div>
+      <div class="login-container"></div>
+      <form>
+        <h3 >  <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt=""></h3>
+        <label >Ingrese El usuario</label>
+        <input type="text" placeholder="Email or Phone" id="username">
+        <label >Ingrese La Contraseña</label>
+        <input type="password" placeholder="Password" id="password">
+        <button>Iniciar Sesion</button>
+       
+      </form>
+    </div>
+  </div>
+</body>
+</html>
